agragado de componente Educacion en Front y Back